fixed content being hidden by footer

--- a/src/global.css
+++ b/src/global.css
@@ -27,6 +27,10 @@ html, body {
   font-family: 'JetBrains Mono';
 }
 
+html {
+  padding-bottom: 30px;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Pixelify Sans';
 }
